# Mouse

./: .editorconfig  .env.example  .gitignore  AGENT_PROFILE.md  Cargo.toml  GETTING_STARTED.md  README.md  rust-toolchain.toml
.agents/: setup-win10.ps1
.agents/skills/mouse-build/: SKILL.md
.agents/skills/mouse-cross/: SKILL.md
.agents/skills/mouse-dev/: SKILL.md
.agents/skills/mouse-knowledge/: SKILL.md
.agents/skills/mouse-lint/: SKILL.md
.agents/skills/mouse-release/: SKILL.md
.agents/skills/mouse-test/: SKILL.md
.cargo/: config.toml
AI/: AGENT_PROFILE.md  README.txt  VISION.md
Source/ASM/: AGENT_PROFILE.md  README.txt  display_reserve_arm64.s  display_reserve_x86_64.asm
Source/C++/: AGENT_PROFILE.md  CMakeLists.txt  display_analyzer.cpp  display_analyzer.h  port_reserver.cpp  port_reserver.h  result_combiner.cpp  result_combiner.h
Source/C++/cuda/: vision_kernels.cu  vision_kernels.h
Source/Python/: AGENT_PROFILE.md  README.txt  pyproject.toml  setup.py
Source/Python/CodingAI/: AGENT_PROFILE.md  README.txt
Source/Python/files/: KEEPER.py
Source/Python/modules/: KEEPER.py  ai_controller.py  autonomy.py  cursor_controller.py  direct_analyzer.py  method_switch.py  screen_analyzer.py  stream_client.py  stream_server.py
Source/Python/modules/externalLangMods/: LOADER.py
Source/Python/tests/: test_init.py
Source/Python/tests/test_files/: test_keeper.py
Source/Python/tests/test_modules/: test_detector_tracker.py  test_loader.py
src/: AGENT_PROFILE.md  main.rs
