[project]
name = "mouse"
version = "0.1.0"
description = "Mouse — A simple computer vision cursor"
readme = "README.md"
authors = [{ name = "MCHIGM" }]
license = "MIT"
requires-python = ">=3.14"

# Managed by both mamba (binary deps) and uv (pure Python)
# mamba handles: numpy, opencv, onnxruntime (native compiles)
# uv handles: everything else (lightning fast pip)
dependencies = [
    # Add pure-Python deps here (uv installs these)
    # "pillow>=11.0",
    # "pydantic>=2.0",
    # "rich>=13.0",
]

[project.optional-dependencies]
# GPU / Computer Vision (mamba)
cv = [
    # "numpy>=2.0",
    # "opencv-python>=4.10",
    # "onnxruntime>=1.20",
]

# Development (uv)
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "black>=24.0",
    "mypy>=1.14",
]

# Testing
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

# Documentation
docs = [
    "sphinx>=8.0",
    "myst-parser>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers --tb=short"
