[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse"
version = "0.1.0"
description = "Mouse — A simple computer vision cursor"
readme = "README.txt"
authors = [{ name = "MCHIGM" }]
license = "MIT"
requires-python = ">=3.14"

# Managed by both mamba (binary deps) and uv (pure Python)
# mamba handles: numpy, opencv, onnxruntime (native compiles)
# uv handles: everything else (lightning fast pip)
dependencies = [
    # Pure-Python deps (uv installs these)
    "pillow>=11.0",
    "mss>=10.0",
]

[project.optional-dependencies]
# GPU / Computer Vision (mamba handles native compiles)
cv = [
    "numpy>=2.0",
    "opencv-python>=4.10",
    # "onnxruntime>=1.20",  # uncomment when ONNX models are ready
]

# Development (uv)
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "black>=24.0",
    "mypy>=1.14",
]

# Testing
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

# Documentation
docs = [
    "sphinx>=8.0",
    "myst-parser>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# PascalCase module names are intentional in this project
"**/KEEPER.py" = ["N999"]
"**/WIKI.py" = ["N999"]
"**/LIBRARIAN.py" = ["N999"]
"**/CodingAI/__init__.py" = ["N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers --tb=short"
markers = [
    "integration: tests that require a real display or hardware (skipped in CI)",
]
